<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_computer_choice"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/lizard"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/image_human_choice"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        app:srcCompat="@drawable/spock"
        android:layout_alignTop="@+id/image_computer_choice"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/V.S"
        android:layout_alignBottom="@+id/image_human_choice"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:id="@+id/editText3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_display"
        android:layout_marginTop="140dp"
        android:id="@+id/text_score"
        android:layout_below="@+id/image_computer_choice"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/rock"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_below="@+id/text_score"
        android:layout_alignRight="@+id/image_computer_choice"
        android:layout_alignEnd="@+id/image_computer_choice" />

    <Button
        android:id="@+id/button_scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scissors"
        android:layout_alignBaseline="@+id/button_rock"
        android:layout_alignBottom="@+id/button_rock"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper"
        android:layout_alignBaseline="@+id/button_scissors"
        android:layout_alignBottom="@+id/button_scissors"
        android:layout_toRightOf="@+id/button_scissors"
        android:layout_toEndOf="@+id/button_scissors" />

    <Button
        android:id="@+id/button_lizzard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_below="@+id/button_rock"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/lizzard" />

    <Button
        android:id="@+id/button_Spock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_lizzard"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/spock" />


</RelativeLayout>