<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spocksalute2">


    <Button
        android:id="@+id/button_newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:background="@color/colorAccent"
        android:text="@string/new_game"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button_youtube"
        android:layout_toStartOf="@+id/button_youtube" />

    <Button
        android:id="@+id/button_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:text="@string/feedback"
        android:textSize="24sp"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/button_highscore"
        android:layout_alignRight="@+id/pb_progressbar"
        android:layout_alignEnd="@+id/pb_progressbar" />

    <Button
        android:id="@+id/button_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pb_progressbar"
        android:layout_alignStart="@+id/pb_progressbar"
        android:layout_below="@+id/button_newgame"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="75dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/highscore"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="31dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/rules"
        android:textSize="24sp"
        android:layout_below="@+id/button_chat"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        android:id="@+id/pb_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp" />

</RelativeLayout>